--- a/ContentMessageSystem/src/main/resources/application.yaml
+++ b/ContentMessageSystem/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: cms@springfive
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
-    generate-ddl: true
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+  data:
+    mongodb:
+      database: cms
+      host: localhost
+      port: 27017
